--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body{
 .nav1{
     transition: color 0.6s;
     cursor: pointer;
+    text-decoration: none;
 }
 .nav1:hover{
     color:#64ffda;
@@ -177,4 +178,37 @@ ul {
         height: 90px;
         margin: 0px auto;
         background-color:#8892b0;
+}
+.title{
+    display: flex;
+    align-items: center;
+}
+.serial{
+    color:#64ffda;
+    font-family: Inter;
+    margin-right: 17px;
+    font-size: 23px;
+}
+.sub{
+    color:#ccd6f6;
+    font-family: Inter;
+    font-size: 28px;
+}
+.title::after{
+    content:"";
+    display:block;
+    height:0.02mm;
+    width:200px;
+    margin:0px 20px;
+    background-color: #8892b0;
+}
+.section1{
+    position: relative;
+    transform: translateY(50px);
+    opacity: 0;
+    transition: all 2s ease;
+}
+.section1.active{
+    transform: translateY(0px);
+    opacity: 1;
 }
