--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ a{
     border-width: 1px;
     border-radius: 6px;
     transition: transform 0.7s;
-    box-shadow: inset 0px 0px #64ffda;
 
 }
 .main{
@@ -206,9 +205,88 @@ ul {
     position: relative;
     transform: translateY(50px);
     opacity: 0;
-    transition: all 2s ease;
+    transition: all 0.6s ease;
 }
 .section1.active{
     transform: translateY(0px);
     opacity: 1;
+}
+.prof{
+    display: flex;
+    flex-direction: row;
+    column-gap: 50px;
+}
+.text{
+    width:510px;
+    color:#8892b0;
+    line-height: 27px;
+    font-family: Inter;
+}
+.photo {
+    position:relative;
+    width:300px;
+    height:300px;
+    z-index:9;
+    border-radius: 5px;
+}
+.bor{
+    border: #64ffda;
+    border-width: 2px;
+    border-style: solid;
+    height:300px;
+    width:300px;
+    position:absolute;
+    top:14px;
+    left:12px;
+    border-radius: 5px;
+    transition: transform 0.3s;
+}
+.container:hover .bor{
+    transform: translate(3px,3px);
+}
+.photo img {
+    width:300px;
+    height: 300px;
+    vertical-align:top;
+    border-radius: 5px;
+    transition: transform 0.5s;
+}
+.photo:before {
+    content:'\A';
+    position:absolute;
+    width:100%; height:100%;
+    top:0; left:0;
+    background:#64ffda;
+    opacity:0.5;
+    transition: all 0.5s;
+    border-radius: 5px;
+    transition: opacity 0.5s;
+}
+.container:hover .photo::before {
+    opacity:0;
+}
+.container:hover .photo{
+    transform: translate(-3px,-3px);
+}
+.container{
+    position: relative;
+    
+}
+.skills-list{
+    display: flex;
+    flex-direction: column;
+    height:100px;
+    flex-wrap: wrap;
+    font-size: 13px;
+    row-gap: 5px;
+    font-family: Fira Code;
+    padding: 0;
+}
+.skills-list li{
+    margin: 0;
+}
+.skills-list li::before{
+    content:"▹";
+    color: #64ffda;
+    margin-right: 5px;
 }
